up/base/ingress/svc.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "up"
  namespace: home-ingress
spec:
  ports:
    - name: "up"
      protocol: "TCP"
      port: 5000
